--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.x-animated-radio {
+    animation: xAnimate 7s infinite;
+}
+
+.y-animated-radio {
+    animation: yAnimate 5s infinite;
+}
+
+@keyframes xAnimate {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translate(20px, 10px);
+    }
+}
+
+@keyframes yAnimate {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translate(10px, 20px);
+    }
+}
