--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,3 +53,10 @@ main:before {
     line-height: 34px;
     height: 35px;
 }
+
+.flip {
+    -moz-transform: scale(-1, -1);
+    -o-transform: scale(-1, -1);
+    -webkit-transform: scale(-1, -1);
+    transform: scale(-1, -1);
+}
