--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    @apply bg-gray-800
+}
 
 .x-animated-radio {
     animation: xAnimate 7s infinite;
