--- a/styles/globals.css
+++ b/styles/globals.css
@@ -102,3 +102,7 @@ body {
     display: none;
     /* Safari and Chrome */
 }
+
+.center-win {
+    @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+}
