update: profile information, activate account with email

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,3 +106,7 @@ body {
 .center-win {
     @apply fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
 }
+
+.disabled {
+    @apply bg-gray-500 cursor-not-allowed;
+}
